--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -14,7 +14,7 @@
         </button>
 
         <mat-menu #menu="matMenu">
-            <button mat-menu-item routerLink="/perfil">
+            <button mat-menu-item routerLink="/pages/perfil">
                 <mat-icon>account_box</mat-icon>
                 <span>Mi Perfil</span>
             </button>
@@ -28,14 +28,14 @@
     <mat-sidenav-container class="example-sidenav-container">
         <mat-sidenav #sidenav style="width: 200px" mode="over">
             <img src="assets/mitocode.png" width="128" style="margin-left: 20px">
-            
+
             <div *ngFor="let m of menus">
                 <button mat-menu-item (click)="sidenav.toggle()" routerLink="{{m.url}}" style="cursor: pointer" >
                     <mat-icon>{{m.icono}}</mat-icon>
                     <span>{{m.nombre}}</span>
                 </button>
                 <mat-divider></mat-divider>
-            </div> 
+            </div>
 
 
             <!--
