--- a/src/app/pages/paciente/paciente.component.html
+++ b/src/app/pages/paciente/paciente.component.html
@@ -4,7 +4,7 @@
     <mat-form-field>
         <input matInput (keyup)="filtrar($event.target.value)" placeholder="Buscar paciente">
     </mat-form-field>
-  </div>
+</div>
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
@@ -42,6 +42,6 @@
 
 <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" [length]="cantidad" (page)="mostrarMas($event)"></mat-paginator>
 
-<button mat-fab color="accent" style="float: right" routerLink="/paciente/nuevo">
+<button mat-fab color="accent" style="float: right" routerLink="/pages/paciente/nuevo">
     <mat-icon>create</mat-icon>
 </button>
