--- a/src/app/pages/signosvitales/signosvitales.component.css
+++ b/src/app/pages/signosvitales/signosvitales.component.css
@@ -1,8 +1,13 @@
 .mat-form-field {
-  font-size: 14px;
-  width: 100%;
+    font-size: 14px;
+    width: 100%;
 }
 
 table {
-  width: 100%;
+    width: 100%;
+}
+
+.contenedor {
+    margin-left: 10px;
+    margin-right: 10px;
 }
